# GenericRAG

./: .coverage  .coveragerc  .env.exampel  .env.example  .gitignore  LICENSE  Makefile  README.md  coverage.xml  pyproject.toml  pytest.ini  run_tests.py  start_api.py  start_frontend.py
data/temp/: 125a1f94-96a2-4526-877f-264035419154_hierarchical.json  22455059-c128-4229-83fd-43c9caea8b65_hierarchical.json  4b248945-6bb3-4d2d-a387-daaf0ca808d4_hierarchical.json  4ba62e05-7534-436d-a43e-86f0f5a2fd06_hierarchical.json  5bda31c9-3461-41cc-bd35-7de78a0ffe6f_hierarchical.json  680d553e-12f0-4d80-b881-0ed8ecc6d517_hierarchical.json  79856ed9-a281-4919-9299-0088fe66178d_hierarchical.json  c941f5d1-b5e4-482d-bc03-c4fb80bfe887_hierarchical.json  f3d8d903-93e6-4b99-a7e0-3808681d125e_hierarchical.json
docs/: bge_m3_api_reference.md  bge_m3_developer_guide.md  bge_m3_endpoints.md  bge_m3_integration_guide.md  bge_m3_tests.md
docs/services/: image_embedding_service.md  pdf_extractor.md  search_service.md  text_preprocessor.md  vlm_service.md
scripts/: run_bge_m3_tests.py
src/: __init__.py  config.py
src/api/: __init__.py  main.py
src/app/: __init__.py  main.py  settings.py
src/app/api/: dependencies.py  lifespan.py  state.py
src/app/api/endpoints/: ingest.py  query.py
src/app/colpali/: __init__.py  loaders.py
src/app/frontend/: __init__.py  gradio_app.py
src/app/models/: schemas.py
src/app/services/: __init__.py  bge_m3_service.py  dspy_gepa.py  dspy_integration.py  image_embedding_service.py  image_storage.py  pdf_extractor.py  search_service.py  text_preprocessor.py  vlm_service.py
src/app/utils/: __init__.py  colpali_utils.py  qdrant_utils.py
src/frontend/: __init__.py  app.py
src/services/: __init__.py  document_processor.py  embedding_service.py  llm_service.py
src/utils/: __init__.py  pdf_converter.py  qdrant_client.py
temporärer_code/: README.md  main.py  pyproject.toml
temporärer_code/src/: __init__.py  config.py  extractor.py  main.py  models.py  utils.py
temporärer_code/tests/: test_api.py  test_extractor.py
tests/: __init__.py  test_api.py  test_bge_m3_api.py  test_bge_m3_qdrant_utils.py  test_bge_m3_search_service.py  test_bge_m3_service.py  test_config.py  test_image_embedding_service.py  test_pdf_converter.py  test_pdf_extractor.py  test_qdrant_client.py  test_search_service.py  test_settings.py  test_start.md  test_text_preprocessor.py  test_utils.py  test_vlm_service.py
tests/integration/: test_bge_m3_integration.py
tests/test_data/: __init__.py  documents.py  fixtures.py  mocks.py
