[project]
name = "pdfextrector"
version = "0.1.0"
description = "PDF Extraktor mit Tabellen-, Text- und Bildextraktion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pdfplumber>=0.9.0",
    "PyMuPDF>=1.23.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "aiosmtplib>=2.0.0",
    "email-validator>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pytest-timeout>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
